# Calibu

./: .gitignore  CMakeLists.txt  README.md  app.cfg  camera.h  conics.cpp  conics.h  def_library.cmake  drawing.cpp  drawing.h  export_package.cmake  find_conics.h  hungarian.cpp  hungarian.h  label.cpp  main.cpp  ransac.h  rectangle.h  target.cpp  target.h  utils.h  vogiatzis.txt
CMakeModules/: AndroidUtils.cmake  FindFREEGLUT.cmake  FindFiducials.cmake  FindOpenCV.cmake  FindPangolin.cmake  def_apk.cmake
applications/: CMakeLists.txt
applications/april-gen/: CMakeLists.txt  main.cpp
applications/calib/: CMakeLists.txt  main.cpp
applications/calib-hal/: CMakeCache.txt  CMakeLists.txt  main.cpp
applications/cmod/: CMakeLists.txt  GetPot  main.cpp
applications/cmod/MVL/: CameraModel.h  camera.cpp  camera.h  camera_2d_to_3d.cpp  camera_2d_to_3d.h  camera_3d_to_2d.cpp  camera_3d_to_2d.h  camera_convert.cpp  camera_convert.h  camera_misc.cpp  camera_misc.h  camera_model_io.cpp  camera_model_io.h  camera_model_linear.cpp  camera_model_linear.h  camera_model_lut.cpp  camera_model_lut.h  camera_model_warped.cpp  camera_model_warped.h  camera_transform_cf.cpp  camera_transform_cf.h  conversions.cpp  conversions.h  kinematics.cpp  kinematics.h  matrix.cpp  matrix.h  mvl_tinyxml.cpp  mvl_tinyxml.h  mvl_tinyxmlerror.cpp  mvl_tinyxmlparser.cpp
applications/grid-gen/: CMakeLists.txt  main.cpp
applications/groundtruth/: CMakeLists.txt  ErrorMetric.cpp  ErrorMetric.h  LICENSE  README.md  ceres_cost_functions.h  compute_homography.cpp  compute_homography.h  contributors.txt  dense_ceres.h  dtrack.h  findtargets.cpp  gettruth.cpp  hess.h  main.cpp  math.h  measurements.h  pfromh.h  requirements.txt  tags.h  usage.h  visualize.cpp
applications/groundtruth/Align/: CMakeLists.txt  compute_homography.cpp  compute_homography.h
applications/groundtruth/Align/CMakeModules/: FindCUDA.cmake  def_library.cmake
applications/groundtruth/CMakeModules/: AndroidUtils.cmake
applications/groundtruth/ImageAlign/: compute_homography.cpp  compute_homography.h
applications/groundtruth/ImageAlign/CMakeModules/: def_apk.cmake  def_executable.cmake  def_test.cmake  export_package.cmake  link_android.cmake
applications/groundtruth/extract/: CMakeLists.txt  main.cpp
applications/groundtruth/m-files/: Cart2T.m  align.m  circle.m  data.out  id_to_tex.cpp  im_align.m  inpoly.m  intersect.m  point_in_tag.m  project.cpp  sift_mosaic.m  tag_refine.m  test.m  test_RANSAC.m  update.m
applications/groundtruth/scripts/: update-cmake_modules.sh
applications/groundtruth/test/: CMakeLists.txt  cameras.xml  codes.h  main.cpp  poses.txt  tags.out
applications/mirror/: main.cpp
applications/modelio/: CMakeLists.txt  main.cpp
applications/rectify/: CMakeLists.txt  main.cpp
applications/tracker/: CMakeLists.txt  main.cpp  my_target.eps
applications/tracker/test_images/: haukes_target_to_print.eps
calib-grid/: CMakeLists.txt  calib.h  main.cpp
calib-grid/optimisation/: CamModels.h  CameraModel.h  CameraModelBase.h  LocalParamSe3.h  ProjectionModel.h  TimedCost.h
calibration/: CMakeLists.txt  app.cfg  main.cpp
cmake_modules/: FindTinyXML.cmake  PackageConfig.cmake.in  def_library.cmake  install_package.cmake
examples/: CMakeLists.txt
examples/modelio/: CMakeLists.txt  main.cpp
fiducials/: CMakeLists.txt  CameraModelBase.h  DistortionModel.h  FiducialsConfig.cmake.in  ProjectionModel.h  adaptive_threshold.h  camera.h  config.h.in  conic_finder.cpp  conic_finder.h  conics.cpp  conics.h  drawing.cpp  drawing.h  find_conics.cpp  find_conics.h  gradient.h  image_processing.cpp  image_processing.h  integral_image.h  label.cpp  label.h  line_group.h  pnp.cpp  pnp.h  random_dot_target.cpp  random_dot_target.h  ransac.h  rectangle.h  target.cpp  target.h  target_grid_dot.cpp  target_grid_dot.h  target_random_dot.cpp  target_random_dot.h  tracker.cpp  tracker.h  utils.cpp  utils.h
include/calibu/: Calibu.h  Platform.h  exception.h
include/calibu/calib/: AutoDiffArrayCostFunction.h  Calibrator.h  CeresExtra.h  CostFunctionAndParams.h  EigenCeresJetNumTraits.h  LocalParamSe3.h  ReprojectionCost.h  ReprojectionCostFunctor.h  exception.h
include/calibu/cam/: CameraModel.h  CameraModelBase.h  CameraModelIO.h  CameraModelInterface.h  CameraModelT.h  CameraRig.h  CameraUtils.h  CameraXml.h  DistortionModel.h  ProjectionKannalaBrandt.h  ProjectionModel.h  Rectify.h  StereoRectify.h  camera_crtp.h  camera_crtp_impl.h  camera_crtp_interop.h  camera_crtp_pimpl.h  camera_models_crtp.h  camera_models_kb4.h  camera_models_poly.h  camera_models_rational.h  camera_rig.h  camera_utils.h  camera_xml.h  rectify_crtp.h  stereo_rectify.h
include/calibu/conics/: Conic.h  ConicFinder.h  FindConics.h
include/calibu/gl/: Drawing.h
include/calibu/image/: AdaptiveThreshold.h  Gradient.h  ImageProcessing.h  IntegralImage.h  Label.h  Threshold.h
include/calibu/pcalib/: base64.h  pcalib.h  pcalib_xml.h  response.h  response_impl.h  response_linear.h  response_poly.h  vignetting.h  vignetting_dense.h  vignetting_impl.h  vignetting_poly.h  vignetting_uniform.h
include/calibu/pose/: Pnp.h  Ransac.h  Tracker.h
include/calibu/utils/: PlaneBasis.h  Range.h  Rectangle.h  Utils.h  (+3 more)
matlab/: CMakeLists.txt  calibu.h  calibu_mex.cpp  calibu_rig.m  class_handle.hpp  mex.cmake
mirror/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  CalibuConfig.cmake.in  CalibuConfigVersion.cmake.in  config.h.in
src/cam/: CameraXml.cpp  Rectify.cpp  StereoRectify.cpp  rectify_crtp.cpp
src/conics/: Conic.cpp  ConicFinder.cpp  FindConics.cpp
src/gl/: Drawing.cpp
src/image/: ImageProcessing.cpp  Label.cpp
src/pcalib/: base64.cpp  pcalib_xml.cpp
src/pose/: Pnp.cpp  Tracker.cpp
src/utils/: Utils.cpp  Xml.cpp  XmlError.cpp  XmlParser.cpp
tests/: CMakeLists.txt  base64_test.cpp  exception_test.cpp  pcalib_xml_test.cpp  response_linear_test.cpp  response_poly_test.cpp  response_test.cpp  vignetting_dense_test.cpp  vignetting_poly_test.cpp  vignetting_uniform_test.cpp
tracker/: CMakeLists.txt  app.cfg  main.cpp  target.eps
(+16 files in other folders)
