SET(SAMPLE_NAME "calibration")

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(FREEGLUT REQUIRED)
FIND_PACKAGE(Pangolin REQUIRED)
FIND_PACKAGE(DC1394 REQUIRED)
FIND_PACKAGE(Boost 1.40 COMPONENTS thread filesystem REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACkAGE(CVD REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(Sophus REQUIRED)

# https://github.com/obiou/FPL.git
FIND_PACKAGE(CCAMERAMODEL QUIET)

IF(CCAMERAMODEL_FOUND)
  SET( CMAKE_BUILD_TYPE Debug )

  ADD_EXECUTABLE(${SAMPLE_NAME} main.cpp)

  INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/ )
  TARGET_LINK_LIBRARIES( ${SAMPLE_NAME} ${LIBRARY_NAME} )

  INCLUDE_DIRECTORIES(
    ${OPENGL_INCLUDE_DIR}
    ${FREEGLUT_INCLUDE_DIR}
    ${Pangolin_INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS}
    ${OpenCV_INCLUDE_DIR}
    ${CCAMERAMODEL_INCLUDE_DIR}
    ${CVD_INCLUDE_DIR}
    ${EIGEN3_INCLUDE_DIR}
    ${Sophus_INCLUDE_DIR}
  )

  LINK_DIRECTORIES(
    ${Sophus_LIBRARY_DIRS}
  )

  TARGET_LINK_LIBRARIES(
    ${SAMPLE_NAME}
    ${OPENGL_LIBRARIES}
    ${FREEGLUT_LIBRARY}
    ${Pangolin_LIBRARY}
    ${DC1394_LIBRARY}
    ${Boost_LIBRARIES}
    ${OpenCV_LIBS}
    ${CCAMERAMODEL_LIBRARIES}
    "${Sophus_LIBRARY_DIRS}/lib${Sophus_LIBRARIES}.so"
    lapack toontag vrpn quat
  )
ENDIF()
