SET(SAMPLE_NAME "calibration")

FIND_PACkAGE(CVD QUIET)

# https://github.com/obiou/FPL.git
FIND_PACKAGE(CCAMERAMODEL QUIET)

IF(CVD_FOUND AND CCAMERAMODEL_FOUND)
    FIND_PACKAGE(Boost 1.40 COMPONENTS thread filesystem REQUIRED)
    FIND_PACKAGE(OpenCV REQUIRED)
    FIND_PACKAGE(Eigen3 REQUIRED)

    #FIND_PACKAGE(Fiducials REQUIRED)
    INCLUDE_DIRECTORIES( "${PROJECT_SOURCE_DIR};${PROJECT_BINARY_DIR}" )
    LINK_LIBRARIES( ${SAMPLE_NAME} ${LIBRARY_NAME} )

    # git://github.com/stevenlovegrove/Sophus.git
    FIND_PACKAGE(Sophus REQUIRED)
    INCLUDE_DIRECTORIES( ${Sophus_INCLUDE_DIR} )
    LINK_DIRECTORIES( ${Sophus_LIBRARY_DIRS} )
    LINK_LIBRARIES(${Sophus_LIBRARIES})

    # git://github.com/stevenlovegrove/Pangolin.git
    FIND_PACKAGE(Pangolin REQUIRED)
    INCLUDE_DIRECTORIES(${Pangolin_INCLUDE_DIRS})
    LINK_DIRECTORIES(${Pangolin_LIBRARY_DIRS})
    LINK_LIBRARIES(${Pangolin_LIBRARIES})

    INCLUDE_DIRECTORIES(
        ${Boost_INCLUDE_DIRS}
        ${OpenCV_INCLUDE_DIR}
        ${CCAMERAMODEL_INCLUDE_DIR}
        ${CVD_INCLUDE_DIR}
        ${EIGEN3_INCLUDE_DIR}
        ${Sophus_INCLUDE_DIR}
    )

    LINK_DIRECTORIES(
        ${Sophus_LIBRARY_DIRS}
    )

    LINK_LIBRARIES(
        ${OpenCV_LIBS}
        ${CCAMERAMODEL_LIBRARIES}
        ${CVD_LIBRARY}
        lapack toontag vrpn quat
    )

    ADD_EXECUTABLE(${SAMPLE_NAME} main.cpp)
ENDIF(CVD_FOUND AND CCAMERAMODEL_FOUND)
