SET(SAMPLE_NAME "mirror")

ADD_EXECUTABLE(${SAMPLE_NAME} main.cpp)

#FIND_PACKAGE(Fiducials REQUIRED)
INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/ )
TARGET_LINK_LIBRARIES( ${SAMPLE_NAME} ${LIBRARY_NAME} )

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(FREEGLUT REQUIRED)
FIND_PACKAGE(Pangolin REQUIRED)
FIND_PACKAGE(DC1394 REQUIRED)
FIND_PACKAGE(Boost 1.40 COMPONENTS thread filesystem REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACkAGE(CVD REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)
FIND_PACKAGE(Sophus REQUIRED)

INCLUDE_DIRECTORIES(
#  ${Fiducials_INCLUDE_DIR}
  ${OPENGL_INCLUDE_DIR}
  ${FREEGLUT_INCLUDE_DIR}
  ${Pangolin_INCLUDE_DIR}
  ${Boost_INCLUDE_DIRS}
  ${OpenCV_INCLUDE_DIR}
  ${CVD_INCLUDE_DIR}
  ${EIGEN3_INCLUDE_DIR}
  ${Sophus_INCLUDE_DIR}
)

TARGET_LINK_LIBRARIES(
  ${SAMPLE_NAME}
#  ${Fiducials_LIBRARY}
  ${OPENGL_LIBRARIES}
  ${FREEGLUT_LIBRARY}
  ${Pangolin_LIBRARY}
  ${DC1394_LIBRARY}
  ${Boost_LIBRARIES}
  ${OpenCV_LIBS}
  lapack toontag
)
